# Anoryx-EcoSystem

./: .env.example  .gitignore  CLAUDE.md  README.md  anoryx-ecosystem-roadmap-v2.md  anoryx-ecosystem-roadmap-v3.md  policy_schema_guard.py
Anoryx-AI-Orchestrator/: .dockerignore  DEPLOY.md  Dockerfile  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
Anoryx-AI-Orchestrator/contracts/: event-envelope.schema.json  openapi.yaml
Anoryx-AI-Orchestrator/deploy/: DEPLOY-K8s.md
Anoryx-AI-Orchestrator/deploy/helm/: gen-k8s-secret.sh
Anoryx-AI-Orchestrator/deploy/secrets/: .gitignore  README.md  gen-dev-secrets.sh
Anoryx-AI-Orchestrator/docs/adr/: 0001-orchestrator-internal-api-contract.md  0002-ecosystem-event-bus-contract.md  0003-event-ingest-pipeline.md  0004-policy-distribution-engine.md  0005-multi-sentinel-coordination.md  0006-persistence-consolidation.md  0007-admin-api-and-minimal-ui.md  0008-deployment.md  0009-relay-for-inter-app-ai-traffic.md  0010-cross-product-identity-correlation.md  0011-automation-engine.md  0012-agent-messaging-and-state.md  0013-external-gateway.md  0014-command-center.md  0014-command-dashboard-and-auto-rollback.md  0015-predictive-scaling.md  0016-sentinel-orchestrator-wiring-validated.md  0017-budget-enforcement-loop-validated.md  0017-rendly-orchestrator-wiring-validated.md
Anoryx-AI-Orchestrator/docs/audit/: O-003-security-audit.md  O-004-security-audit.md  O-005-security-audit.md  O-006-security-audit.md
Anoryx-AI-Orchestrator/src/orchestrator/: __init__.py  app.py  boundary.py  config.py  hmac_verify.py  schema_validation.py  security.py
Anoryx-AI-Orchestrator/tests/: conftest.py  test_contract.py
Anoryx-AI-Orchestrator/tests/deploy/: test_compose.py  test_dockerfile.py  test_helm.py
Anoryx-AI-Orchestrator/tests/integration/: _sentinel_shim.py  conftest.py  test_admin_e2e.py  test_authz_reads_e2e.py  test_automation_e2e.py  test_command_center_e2e.py  test_coordination_e2e.py  test_distribution_chain.py  test_distribution_e2e.py  test_external_gateway_e2e.py  test_identity_e2e.py  test_ingest_e2e.py  test_messaging_e2e.py  test_migration_roundtrip.py  test_predictive_scaling_e2e.py  test_registry_crud.py  test_relay_e2e.py  test_rendly_wiring_e2e.py  test_safety_e2e.py  test_sentinel_wiring_e2e.py  test_x003_budget_enforcement_e2e.py
Anoryx-AI-Orchestrator/tests/unit/: test_admin_router.py  test_automation_config.py  test_automation_engine.py  test_automation_matcher.py  test_automation_router.py  test_command_center_config.py  test_command_center_router.py  test_coordination_config.py  test_coordination_filter.py  test_coordination_router_auth.py  test_dispatcher.py  test_distribution_config.py  test_distribution_engine.py  test_distribution_router.py  test_endpoint_validation.py  test_external_gateway_config.py  test_external_gateway_router.py  test_hash_chain.py  test_hash_chain_automation.py  test_hash_chain_external_gateway.py  test_hash_chain_identity.py  test_hash_chain_messaging.py  test_hash_chain_registry.py  test_hash_chain_relay.py  test_hash_chain_rollback.py  test_hash_chain_safety.py  test_hash_chain_state.py  test_hmac_verify.py  test_identity_config.py  test_identity_router.py  test_messaging_config.py  test_messaging_router.py  test_pipeline_helpers.py  test_predictive_scaling_config.py  test_predictive_scaling_router.py  test_query_router.py  test_relay_config.py  test_relay_router.py  test_router_errors.py  test_safety_config.py  (+4 more)
Anoryx-Sentinel/: .coverage  .dockerignore  .env.example  .gitattributes  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  SECURITY.md  alembic.ini  coverage.json  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
Anoryx-Sentinel/.claude-fleet/: plugin.json  settings.json
Anoryx-Sentinel/.claude-fleet/agents/: bench-coach.md  bulk-pipeline.md  compliance-engine.md  data-protection.md  policy-engine.md  security-auditor.md
Anoryx-Sentinel/.claude-fleet/commands/: new-feature.md  scorecard.md
Anoryx-Sentinel/.claude-fleet/hooks/: block-dangerous-bash.sh  tests-must-pass.sh
Anoryx-Sentinel/contracts/: events.schema.json  ids.md  openapi.yaml  policy.schema.json
Anoryx-Sentinel/deploy/: DEPLOY-K8s.md  DISASTER-RECOVERY.md  MULTI-REGION.md  ONBOARDING.md  README.md  SELF_HOST.md
Anoryx-Sentinel/deploy/caddy/: .gitignore  Caddyfile
Anoryx-Sentinel/deploy/grafana/: README.md  sentinel-dashboard.json
Anoryx-Sentinel/deploy/helm/: gen-k8s-secret.sh
Anoryx-Sentinel/deploy/otel/: README.md  collector-config.yaml
Anoryx-Sentinel/deploy/secrets/: .gitignore  README.md  gen-dev-secrets.ps1  (+1 more)
Anoryx-Sentinel/frontend/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts  vitest.render.config.ts
Anoryx-Sentinel/infra/: SECURITY.md
Anoryx-Sentinel/orchestrator/: conductor.py  models.py  quartermaster.py  run.py  tasks.yaml  worktree.py
Anoryx-Sentinel/tests/: README.md  test_placeholder.py
Delta/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
Delta/contracts/: delta-budget-policy.schema.json  delta-financial.schema.json
Delta/deploy/: DEPLOY-K8s.md
Delta/frontend/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts  vitest.render.config.ts
Delta/scripts/: bench_commit_latency.py
Delta/tests/: conftest.py  test_attribution_mapping.py  test_budget_policy.py  test_budget_policy_emit.py  test_budget_policy_schema.py  test_budget_variant_roundtrip.py  test_burn_rate.py  test_json_schema_contracts.py  test_ledger_invariant.py  test_money.py  test_reconciliation.py
Rendly/: .coveragerc-persistence  .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
Rendly/contracts/: README.md  ids.md  messages.schema.json  openapi.yaml  rendly-domain.schema.json
Rendly/deploy/: DEPLOY-K8s.md
(+1590 files in other folders)
