[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anoryx-sentinel"
version = "0.10.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "opa-python-client>=1.3,<2",
    # asyncpg: required by SQLAlchemy async engine (postgresql+asyncpg://).
    "asyncpg>=0.29,<1",
    "redis>=5.0,<6",
    "arq>=0.26,<1",
    "python-jose[cryptography]>=3.3,<4",
    "httpx>=0.27,<1",
    "structlog>=24,<26",
    "opentelemetry-api>=1.24,<2",
    "opentelemetry-sdk>=1.24,<2",
    "opentelemetry-instrumentation-fastapi>=0.45b0,<1",
    "opentelemetry-instrumentation-httpx>=0.45b0,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "pyyaml>=6.0,<7",
    # SQLAlchemy 2.x async API (stream_scalars, async_sessionmaker, etc.).
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    # psycopg (v3): used by Alembic migrations (sync connection).
    "psycopg[binary]>=3.1,<4",
    # argon2-cffi: Argon2id password hashing per OWASP recommendation.
    "argon2-cffi>=23,<25",
    "python-dotenv>=1.0,<2",
    # cryptography: ECDSA P-256 (ES256) compact-JWS for F-008 policy signature
    # verification. Declared explicitly — not relied upon transitively.
    "cryptography>=42,<50",
    # jsonschema: F-008 validates policy records with JSON Schema Draft 2020-12 at
    # RUNTIME (src/policy/schema_validator.py); also used by contract tests.
    "jsonschema[format]>=4.22,<5",
    # prometheus-client: F-009 /metrics exposition endpoint (ADR-0011 D4).
    "prometheus-client>=0.20,<1",
    # opentelemetry OTLP HTTP exporter: F-010 (ADR-0012 §5) wires app→collector OTLP
    # span export, env-gated on OTEL_EXPORTER_OTLP_ENDPOINT. HTTP/protobuf is the
    # lightweight core default; the heavier gRPC transport is the [otlp-grpc] extra.
    "opentelemetry-exporter-otlp-proto-http>=1.24,<2",
]

[project.optional-dependencies]
# Optional feature extras (ADR-0012 §"Optional dependency boundaries"). The default
# (slim) image installs core only; the full image installs [all]. Imports of these
# packages are lazy/guarded at the use site with a clear "pip install ...[extra]" hint.
bedrock = [
    # AWS Bedrock provider (F-006). Lazy-imported in router/providers/bedrock_provider.py.
    "boto3>=1.34,<2",
    "aioboto3>=12,<14",
]
pii-spacy = [
    # Presidio PII detection (F-005 data_protection). spaCy is Presidio's NLP engine.
    "spacy>=3.7,<4",
    "presidio-analyzer>=2.2,<3",
    "presidio-anonymizer>=2.2,<3",
]
otlp-grpc = [
    # Heavier gRPC OTLP transport (pulls grpcio); HTTP is the core default.
    "opentelemetry-exporter-otlp-proto-grpc>=1.24,<2",
]
all = ["anoryx-sentinel[bedrock,pii-spacy,otlp-grpc]"]
dev = [
    "ruff>=0.4,<1",
    "black>=24,<26",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<7",
    "pytest-httpx>=0.30,<1",
    "httpx",
    "semgrep",
    "hypothesis>=6,<7",
    # claude-agent-sdk: the build-fleet harness (orchestrator/) only — it bundles a
    # ~220MB Claude CLI binary and is NOT imported by the deployed gateway (src/),
    # so it is excluded from both image variants and lives here for dev/fleet use.
    "claude-agent-sdk",
    # jsonschema moved to [project.dependencies] (runtime need for F-008 intake).
]

[project.scripts]
# F-008 operator CLI (ADR-0009 §11): sign + push a policy, or generate a dev keypair.
sentinel-cli = "policy.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "S"]
# S603/S607: subprocess calls with literal command lists are not a
# security risk in our orchestrator (we control all inputs; git/gh/
# pytest are trusted, pinned dev dependencies).
# S110: best-effort cleanup paths intentionally swallow exceptions —
# logging would mask the original SDK exception we want to propagate.
ignore = ["S603", "S607", "S110"]

[tool.ruff.lint.per-file-ignores]
# Tests use assert as their core assertion mechanism; S101 doesn't apply.
# S106: test fixtures use hardcoded sentinel values (fake credentials) — not production secrets.
"tests/**/*.py" = ["S101", "S106"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require live DB and migrations)",
    "redis_integration: marks tests that require a live Redis instance (F-009)",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
