[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anoryx-sentinel"
version = "0.10.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "opa-python-client>=1.3,<2",
    # asyncpg: required by SQLAlchemy async engine (postgresql+asyncpg://).
    "asyncpg>=0.29,<1",
    "redis>=5.0,<6",
    "arq>=0.26,<1",
    "python-jose[cryptography]>=3.3,<4",
    "httpx>=0.27,<1",
    "structlog>=24,<26",
    "opentelemetry-api>=1.24,<2",
    "opentelemetry-sdk>=1.24,<2",
    "opentelemetry-instrumentation-fastapi>=0.45b0,<1",
    "opentelemetry-instrumentation-httpx>=0.45b0,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "pyyaml>=6.0,<7",
    # SQLAlchemy 2.x async API (stream_scalars, async_sessionmaker, etc.).
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    # psycopg (v3): used by Alembic migrations (sync connection).
    "psycopg[binary]>=3.1,<4",
    # argon2-cffi: Argon2id password hashing per OWASP recommendation.
    "argon2-cffi>=23,<25",
    "python-dotenv>=1.0,<2",
    # cryptography: ECDSA P-256 (ES256) compact-JWS for F-008 policy signature
    # verification. Declared explicitly — not relied upon transitively.
    "cryptography>=42,<50",
    # jsonschema: F-008 validates policy records with JSON Schema Draft 2020-12 at
    # RUNTIME (src/policy/schema_validator.py); also used by contract tests.
    "jsonschema[format]>=4.22,<5",
    # regex: F-028 custom-PII engine (src/data_protection/custom_pii/). Used
    # instead of the stdlib `re` specifically for its per-call timeout= (a hard
    # ReDoS backstop when matching client-supplied patterns — re has no timeout).
    # A core dep, NOT an extra: the custom-PII engine is deliberately independent
    # of the optional [pii-spacy] Presidio stack so it runs on the slim image.
    "regex>=2024.0,<2027",
    # prometheus-client: F-009 /metrics exposition endpoint (ADR-0011 D4).
    "prometheus-client>=0.20,<1",
    # opentelemetry OTLP HTTP exporter: F-010 (ADR-0012 §5) wires app→collector OTLP
    # span export, env-gated on OTEL_EXPORTER_OTLP_ENDPOINT. HTTP/protobuf is the
    # lightweight core default; the heavier gRPC transport is the [otlp-grpc] extra.
    "opentelemetry-exporter-otlp-proto-http>=1.24,<2",
    # authlib: F-014 (ADR-0017 §5 D4) OIDC auth-code + PKCE + JWKS signature/claims
    # validation. No hand-rolled JWT/signature verification (R3). OIDC is a core SSO
    # protocol so authlib stays in core deps; only SAML's python3-saml is the
    # optional [saml] extra (it needs the system libxmlsec1 native library).
    "authlib>=1.3,<2",
]

[project.optional-dependencies]
# Optional feature extras (ADR-0012 §"Optional dependency boundaries"). The default
# (slim) image installs core only; the full image installs [all]. Imports of these
# packages are lazy/guarded at the use site with a clear "pip install ...[extra]" hint.
bedrock = [
    # AWS Bedrock provider (F-006). Lazy-imported in router/providers/bedrock_provider.py.
    "boto3>=1.34,<2",
    "aioboto3>=12,<14",
]
pii-spacy = [
    # Presidio PII detection (F-005 data_protection). spaCy is Presidio's NLP engine.
    "spacy>=3.7,<4",
    "presidio-analyzer>=2.2,<3",
    "presidio-anonymizer>=2.2,<3",
]
otlp-grpc = [
    # Heavier gRPC OTLP transport (pulls grpcio); HTTP is the core default.
    "opentelemetry-exporter-otlp-proto-grpc>=1.24,<2",
]
saml = [
    # SAML SSO for the admin surface (F-014 STEP 5, ADR-0017 §6 D5). python3-saml is
    # the vetted SP toolkit with XSW (signature-wrapping) defences; we configure
    # strict + validate every condition and do NOT hand-roll XML signature
    # validation (R3). It pulls lxml + xmlsec; the xmlsec wheel bundles the native
    # libxmlsec1 (win_amd64 / manylinux), and the deploy image additionally installs
    # libxmlsec1. onelogin.saml2 is LAZY-imported in src/admin/sso/saml.py so the
    # slim image / a non-SAML deploy imports src/admin without it installed
    # (mirrors the bedrock / pii-spacy / otlp-grpc optional-extras discipline).
    "python3-saml>=1.16,<2",
]
bulk = [
    # F-015 bulk pipeline: S3/MinIO object storage client (presigned uploads +
    # server-side fetch). boto3 is the same lib family as the [bedrock] extra; it
    # is LAZY-imported in src/bulk/storage/minio_backend.py so the slim image / a
    # non-bulk deploy imports src/bulk without it installed (optional-extras
    # discipline, ADR-0018 §6 / R10). arq + redis are already core deps.
    "boto3>=1.34,<2",
]
code-scan = [
    # F-016 code-output scanning (ADR-0019 §11). Heavy subprocess-based scanners
    # live behind this optional extra so the slim image / non-scanning deploys
    # import src/code_scan without them installed. LAZY-guarded in scanners.py:
    # a missing binary raises ScannerError("binary_not_found") → WARN (fail-safe,
    # never a crash). Semgrep ships with the dev extra (unpinned); here we pin
    # to a stable major range and make it an explicit runtime dependency for
    # code-scan-enabled deployments. Bandit is new (absent from dev before F-016).
    "semgrep>=1.60,<2",
    "bandit>=1.7,<2",
]
dr-s3 = [
    # F-024 disaster recovery: S3/MinIO off-cluster backup sink
    # (src/dr/backends/s3.py). Same lib family as [bulk]/[bedrock]; LAZY-imported
    # so the slim image / a local-sink-only deploy (the default — src/dr/config.py)
    # does not need boto3 installed (ADR-0030).
    "boto3>=1.34,<2",
]
vault = [
    # F-027 provider key vaulting: HashiCorp Vault KV-v2 backend
    # (src/gateway/keyvault/vault_source.py). LAZY-imported — the default
    # keyvault_backend="env" deploy does not need hvac installed (ADR-0033).
    "hvac>=2.1,<3",
]
kms = [
    # F-027 provider key vaulting: AWS KMS envelope-decryption backend
    # (src/gateway/keyvault/kms_source.py). Same lib family as [bedrock]/[dr-s3];
    # LAZY-imported so the default keyvault_backend="env" deploy does not need
    # boto3 installed for this purpose (ADR-0033).
    "boto3>=1.34,<2",
]
all = ["anoryx-sentinel[bedrock,pii-spacy,otlp-grpc,saml,bulk,code-scan,dr-s3,vault,kms]"]
dev = [
    "ruff>=0.4,<1",
    "black>=24,<26",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<7",
    "pytest-httpx>=0.30,<1",
    "httpx",
    "semgrep",
    "hypothesis>=6,<7",
    # claude-agent-sdk: the build-fleet harness (orchestrator/) only — it bundles a
    # ~220MB Claude CLI binary and is NOT imported by the deployed gateway (src/),
    # so it is excluded from both image variants and lives here for dev/fleet use.
    "claude-agent-sdk",
    # jsonschema moved to [project.dependencies] (runtime need for F-008 intake).
]

[project.scripts]
# F-008 operator CLI (ADR-0009 §11): sign + push a policy, or generate a dev keypair.
sentinel-cli = "policy.cli:main"
# F-024 operator CLI (ADR-0030): backup / restore / list disaster-recovery dumps.
sentinel-dr = "dr.cli:main"
# F-025 operator CLI (ADR-0031): guided sandbox-tenant onboarding.
sentinel-onboarding = "onboarding.cli:main"
# F-026 operator CLI (ADR-0032): MCP server allow-listing + inspection preview.
sentinel-mcp = "mcp_gateway.cli:main"
# F-027 operator CLI (ADR-0033): provider key vault status + fetch verification.
sentinel-keyvault = "gateway.keyvault.cli:main"
# F-028 operator CLI (ADR-0034): custom PII pattern add/list/revoke/test.
sentinel-pii = "data_protection.custom_pii.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "S"]
# S603/S607: subprocess calls with literal command lists are not a
# security risk in our orchestrator (we control all inputs; git/gh/
# pytest are trusted, pinned dev dependencies).
# S110: best-effort cleanup paths intentionally swallow exceptions —
# logging would mask the original SDK exception we want to propagate.
ignore = ["S603", "S607", "S110"]

[tool.ruff.lint.per-file-ignores]
# Tests use assert as their core assertion mechanism; S101 doesn't apply.
# S105/S106: test fixtures use hardcoded sentinel values (fake credentials) — not production secrets.
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# perf tests are timing-threshold assertions (F-023, ADR-0029) — noisier on a
# shared/loaded CI runner than the rest of the suite, so they are excluded from
# the default run and invoked explicitly: `pytest -m perf tests/gateway/`.
addopts = "-m 'not perf'"
markers = [
    "integration: marks tests as integration tests (require live DB and migrations)",
    "redis_integration: marks tests that require a live Redis instance (F-009)",
    "perf: marks performance/load tests with wall-clock latency budgets (not run by default)",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
