[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anoryx-delta"
version = "0.2.0"
description = "Delta — FinOps / ERP / budget-policy (D-003: double-entry ledger persistence)."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7,<3",
  "jsonschema[format]>=4.22",
  # D-003 persistence: async app driver (asyncpg) + sync migration driver (psycopg).
  "sqlalchemy[asyncio]>=2.0,<3",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.1",
  "python-dotenv>=1.0",
  # D-004 event ingest: the first Delta runtime HTTP surface (POST /v1/ingest/usage).
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  # D-005 policy signing: ECDSA P-256 (ES256) compact-JWS, byte-conformant to Sentinel's
  # signer (delta/policy/sign.py). Same constraint as Anoryx-Sentinel so both products sign
  # with the same crypto primitives.
  "cryptography>=42,<50",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "pytest",
  "pytest-cov",
  "pytest-asyncio>=0.23",
  # D-004: drive the ASGI app in-process for the non-stubbed real-seam e2e.
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "S"]
# S101 (assert) and S106 (hardcoded test value) are fine in tests.
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
# Alembic migrations build DDL by interpolating trusted module constants (schema /
# role / table names — never user input), which DDL cannot parameterize. S608 (SQL
# injection via string construction) does not apply to these fixed identifiers.
"src/delta/persistence/migrations/**" = ["S608"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
# pytest-asyncio: async test functions run without an explicit marker.
asyncio_mode = "auto"
# Make the package and the per-suite test helpers importable from conftest and tests
# alike (the conftest loads before pytest would add its own dir to sys.path, so the
# importable account_seed helper needs an explicit path — the D-004 / r-003 lesson).
pythonpath = ["src", "tests/persistence", "tests/ingest"]

[tool.coverage.run]
source = ["src"]
branch = true
# Migrations run via the alembic CLI (subprocess), not pytest — exclude them from
# coverage so the figure reflects the library code the suite actually exercises.
omit = [
  "src/delta/persistence/migrations/*",
]

[tool.coverage.report]
# >=80% total (D-003 DO-NOT-MERGE bar); the ledger-core modules
# (persistence/ledger_store, balances, database) are held to >=90% in CI.
fail_under = 80
show_missing = true
