[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rendly"
version = "1.0.0"
description = "Rendly core platform API contract (R-001) + internal domain model (R-002: types, schemas, invariants — no server/DB/DDL)."
requires-python = ">=3.12"
# R-002 adds the FIRST Rendly Python package: the internal domain model (Pydantic v2).
# It is storage-agnostic — no server, no DB, no DDL (those are R-003/R-004).
dependencies = [
  "pydantic>=2.7,<3",
]

# The contract-validation suite (R-001) + the domain test suite (R-002) share one dev extra.
[project.optional-dependencies]
dev = [
  "jsonschema[format]>=4.22,<5",
  "openapi-spec-validator>=0.7,<0.8",
  "pyyaml>=6,<7",
  "pytest>=8,<9",
  "pytest-cov",
  "ruff>=0.5",
  "black>=24",
]

# src-layout: the importable domain package lives under src/rendly/.
[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

# Coverage is scoped to the domain package. The CI lane runs `--cov=rendly`, so a
# domain suite that did not actually execute would leave rendly uncovered and FAIL
# the gate below — proving the lane runs the domain tests (not skips them).
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
