[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rendly"
version = "1.0.0"
description = "Rendly core platform API contract (R-001) + internal domain model (R-002) + self-contained OAuth2/JWT auth (R-003: ES256 issue/verify/refresh, in-memory user-store seam — no DB/DDL)."
requires-python = ">=3.12"
# R-002 added the FIRST Rendly Python package: the internal domain model (Pydantic v2).
# R-003 adds the self-contained OAuth2 + JWT auth service over those types: real ES256 token
# mint/verify + rotating refresh, served by FastAPI. Persistence (the real UserStore) is R-004.
dependencies = [
  "pydantic>=2.7,<3",
  # R-003 auth surface + crypto:
  "fastapi>=0.110,<1",            # the auth HTTP surface (token / revoke / users-me).
  "pyjwt[crypto]>=2.8,<3",        # ES256 JWT mint/verify (vetted lib; no hand-rolled JWT).
  "cryptography>=42,<50",         # ES256 P-256 key loading (matches the Sentinel pin).
  "argon2-cffi>=23,<25",          # Argon2id credential hashing (OWASP; matches Sentinel).
]

# The contract suite (R-001), domain suite (R-002), and auth suite (R-003) share one dev extra.
[project.optional-dependencies]
dev = [
  "jsonschema[format]>=4.22,<5",
  "openapi-spec-validator>=0.7,<0.8",
  "pyyaml>=6,<7",
  "pytest>=8,<9",
  "pytest-cov",
  "httpx>=0.27,<1",                # FastAPI TestClient transport for the R-003 auth e2e.
  "ruff>=0.5",
  "black>=24",
]

# src-layout: the importable domain package lives under src/rendly/.
[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

# Coverage is scoped to the domain package. The CI lane runs `--cov=rendly`, so a
# domain suite that did not actually execute would leave rendly uncovered and FAIL
# the gate below — proving the lane runs the domain tests (not skips them).
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
