[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rendly"
version = "1.0.0"
description = "Rendly core platform API contract (R-001) + internal domain model (R-002) + self-contained OAuth2/JWT auth (R-003) + Postgres identity persistence with RLS (R-004: DB-backed UserStore/RefreshTokenStore, own `rendly` schema + Alembic)."
requires-python = ">=3.12"
# R-002 added the FIRST Rendly Python package: the internal domain model (Pydantic v2).
# R-003 adds the self-contained OAuth2 + JWT auth service over those types: real ES256 token
# mint/verify + rotating refresh, served by FastAPI. R-004 adds the FIRST Rendly persistence
# layer: a `rendly` Postgres schema with RLS, the DB-backed UserStore + RefreshTokenStore, and
# an Alembic migration chain — making R-003's two in-memory seams real on Postgres.
dependencies = [
  "pydantic>=2.7,<3",
  # R-003 auth surface + crypto:
  "fastapi>=0.110,<1",            # the auth HTTP surface (token / revoke / users-me).
  "pyjwt[crypto]>=2.8,<3",        # ES256 JWT mint/verify (vetted lib; no hand-rolled JWT).
  "cryptography>=42,<50",         # ES256 P-256 key loading (matches the Sentinel pin).
  "argon2-cffi>=23,<25",          # Argon2id credential hashing (OWASP; matches Sentinel).
  # R-004 persistence (SYNC stack — matches R-003's sync seams; NOT asyncpg):
  "sqlalchemy>=2,<3",             # sync Session + ORM models for the identity tables.
  "psycopg[binary]>=3.1,<4",      # the sync Postgres driver (postgresql+psycopg://).
  "alembic>=1.13,<2",             # the `rendly`-schema migration chain.
  "python-dotenv>=1,<2",          # env loading for the Alembic migration environment.
  # R-005 chat runtime (ASYNC stack — the WebSocket/chat layer, ADR-0004 Fork D forward
  # boundary; runs ALONGSIDE the sync stack, does not replace it):
  "asyncpg>=0.29,<0.31",          # the async Postgres driver (postgresql+asyncpg://) for chat.
  "greenlet>=3,<4",               # required by SQLAlchemy's async engine (explicit so CI is safe).
  # R-009: a transitive starlette dep already, made explicit because pipeline.py now imports
  # it directly (anyio.CancelScope(shield=True) — the disconnect-triggered huddle archive
  # must survive Starlette's own cancellation of an already-disconnecting WebSocket's scope).
  "anyio>=4,<5",
]

# The contract suite (R-001), domain suite (R-002), and auth suite (R-003) share one dev extra.
[project.optional-dependencies]
# R-010: the ASGI server, kept OUT of core deps (not needed by CI or tests — only the
# deploy image needs it). Mirrors Anoryx-AI-Orchestrator's own `server` extra (ADR-0008 C1).
server = ["uvicorn[standard]>=0.30,<1"]
dev = [
  "jsonschema[format]>=4.22,<5",
  "openapi-spec-validator>=0.7,<0.8",
  "pyyaml>=6,<7",
  "pytest>=8,<9",
  "pytest-cov",
  "httpx>=0.27,<1",                # FastAPI TestClient transport for the R-003 auth e2e.
  "ruff>=0.5",
  "black>=24",
]

# src-layout: the importable domain package lives under src/rendly/.
[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

# Default coverage scope = the NON-DB surface (contracts/domain/auth). The contracts CI
# lane runs `--cov=rendly` with NO database, so a suite that did not execute would leave its
# package uncovered and FAIL the gate below — proving the lane runs those tests, not skips
# them. The `persistence/*` package requires a live Postgres and is therefore measured in
# its OWN DB lane (rendly-db, persistence-floor step, via .coveragerc-persistence) rather
# than here; omitting it keeps this gate honest for the no-DB surface. Migrations are DDL
# run through the alembic subprocess and are never unit-measured.
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
  "*/persistence/*",
  # The realtime chat runtime (R-005) requires a live Postgres + an in-process ASGI
  # WebSocket, so — like persistence/* — it is measured in its OWN DB lane (rendly-db) with
  # .coveragerc-realtime, not in the no-DB contracts lane. Omitting it keeps the no-DB gate
  # honest (a DB-only package can't be covered without a DB).
  "*/realtime/*",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
